# statistics-from-allocine

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  actor_page.py  app.py  corrections.py  countries.csv  countries.pbids  create_csv.py  create_empty_csv.py  film.py  film_page.py  films.csv  genres.csv  home_page.py  main.py  person.py  pyproject.toml  rapport.pbix  requirements.txt  streamlit_app.py  watched.py  watched.txt
csv/: actors.csv  cesars.csv  countries.csv  directors.csv  films.csv  genres.csv  oscars.csv  palmes.csv
html_pages/: oss.html  panda.html
src/: __init__.py  actor_page.py  corrections.py  create_csv.py  create_empty_csv.py  details_page.py  film.py  film_page.py  home_page.py  person.py  token_page.py  type_defs.py  utils.py  watched.py
tests/: test_film.py  test_person.py
