[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statistics-from-allocine"
version = "3.3.0"
description = "App to have statistics about a films list from Allocine."
authors = [{name = "cchenu"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.30",
  "pandas>=1.5",
  "plotly>=5.0",
  "requests>=2.28",
  "tqdm>=4.64",
  "beautifulsoup4>=4.11",
  "python-dotenv>=1.0",
  "deep-translator>=1.11",
]

[project.urls]
homepage = "https://github.com/cchenu/statistics-from-allocine"
documentation = "https://github.com/cchenu/statistics-from-allocine"
repository = "https://github.com/cchenu/statistics-from-allocine"

[tool.ruff]
line-length = 79
target-version = "py312"
fix = false
extend-exclude = ["venv"]

[tool.ruff.lint]
unfixable = []
select = [
  "ALL"
]

ignore = [
  "PLR0904", # too-many-public-methods
  "PLR0913", # Too many arguments to function call
  "PLR0911", # Too many returns
  "PLR0912", # Too many branches
  "PLR0914", # Too many locals
  "PLR0915", # Too many statements
  "D203", # incorrect-blank-line-before-class
  "D212", # multi-line-summary-first-line 
  "COM812", # missing-trailing-coma
  "FBT001", # boolean-type-hint-positional-argument
  "FBT002", # boolean-default-value-positional-argument
  "C901", # complex-structure
  "CPY001", # missing-copyright-notice
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101", # assert
  "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
pretty = true
exclude = "^venv/"

[tool.isort]
profile = "black"
